GTS-AAI-repo/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gts-aai
  namespace: gts-aai
  labels:
    app: gts-aai
spec:
  type: ClusterIP
  selector:
    app: gts-aai
  ports:
    - name: http
      port: 80
      targetPort: 5000
